samples/_failures_safe/1761076699_379654_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a77d465.c: In function ‘main’:
./samples/SAFE/__tmp_1a77d465.c:156:9: error: expected declaration or statement at end of input
  156 |         printf("%02X ", output_data[i]);
      |         ^~~~~~
./samples/SAFE/__tmp_1a77d465.c:156:9: error: expected declaration or statement at end of input
